--- a/instarkilogram/WebContent/feed/style.css
+++ b/instarkilogram/WebContent/feed/style.css
@@ -1,12 +1,15 @@
 @charset "UTF-8";
 
 body {
-  padding-top: 75px;
+	padding-top: 75px;
 }
 
 .bar {
 	position: fixed;
-	top: 0; left : 0; right : 0; bottom : 10;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 10;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -15,7 +18,7 @@ body {
 	display: flex;
 	left: 0;
 	right: 0;
-	background-color:white;
+	background-color: white;
 	border-bottom: 1px solid #dbdbdb;
 	border-top: highlight;
 	border-color: grey;
@@ -32,27 +35,197 @@ body {
 }
 
 .container {
-	padding-top : 1px;
+	padding-top: 0.5rem;
 	margin-top: auto;
 	margin-bottom: auto;
 	width: 600px;
-	margin-left: auto;
-	margin-right: auto;
+	margin-right: 0;
+	align-items: center;
 }
 
 .nav-icon {
+	
 	justify-content: space-between;
 	margin-left: auto;
 	margin-right: auto;
-	
-	font-size: 50px
-	align-items: center;
-	
+	font-size: 50px align-items: center;
+}
+
+.grid-head {
+	float: inherit;
+}
+
+.grid-body {
 	
 }
 
+.grid_table {
+	margin-left: auto;
+	margin-right: auto;
+	width: 293px;
+	height: 293px;
+}
+
+.total_search {
+	width: 50%;
+	height: 28px;
+	font-size: 15px;
+	margin-bottom: 8px;
+}
+
+.search_btn {
+	font-size: 15px;
+	height: 32px;
+	margin-bottom: 8px;
+}
 
 .search_result {
 	margin-left: 500px;
-	
 }
+
+.write {
+	width: 800px;
+	height: 400px;
+	margin: auto;
+	margin-top: 120px;
+}
+
+.file {
+	width: 500px;
+	margin: auto;
+	display: block;
+	border-radius: 4px;
+}
+
+.post_content{
+	width: 500px;
+	margin: auto;
+	display: block;
+	border-radius: 4px;
+
+}
+
+
+
+.newFeed {
+	width: 500px;
+	margin: auto;
+	display: block;
+	margin-top: 50px;
+}
+
+#sbm {
+	margin-top: 2px;
+	height: 40px;
+	background-color: #1E82FF;
+	color: white;
+	font-size: 20px;
+	border: none;
+	width: 500px;
+	margin: auto;
+	display: block;
+	border-radius: 4px;
+}
+
+#f_input {
+	height: 30px;
+}
+
+
+.left_body {
+	background-color: gainsboro;
+	margin-right: 100px;
+	width: 500px;
+	height: 2000px;
+	display: flex;
+	flex-direction: column;
+}
+
+.right_body {
+	background-color: write;
+	width: 300px;
+	height: 1000px;
+	left: 65%;
+	position: fixed;
+}
+
+.main_body {
+	display: flex;
+	justify-content: center;
+	padding-top: 50px;
+}
+
+.feed_box {
+	background-color: white;
+	width: 480px;
+	margin: 10px;
+	height: 3000px;
+}
+
+.feed_img {
+	width: 100%;
+	height: 60%;
+	object-fit: contain;
+}
+
+.feed_content {
+	paddint: 10px;
+}
+
+.feed_like {
+	padding: 0x 0px;
+}
+
+.feed_feply {
+	padding: 0px 10px;
+	display: flex;
+	fiex-direction: column;
+}
+
+.profile_img {
+	width: 60px;
+	height: 60px;
+	border-radius: 50%;
+	margin-left: 10px;
+	margin-top: 5px;
+}
+
+.mem {
+	margin-left: 30px;
+	color: grey;
+}
+
+.feed_name {
+	justify-content: space-between;
+}
+
+.box_pro {
+	display: flex;
+	align-items: center;
+}
+
+.profile_img1 {
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	margin-left: 10px;
+}
+
+.btn {
+	color: dodgerblue;
+	background-color: write;
+	margin-left: 130px;
+	margin-bottom: 30px;
+	border: none;
+}
+
+.butt {
+	padding: 5px 10px;
+}
+
+.profile_name {
+	margin-bottom: 400px;
+}
+
+
+
