--- a/instarkilogram/WebContent/feed/style.css
+++ b/instarkilogram/WebContent/feed/style.css
@@ -107,7 +107,7 @@ body {
 
 
 
-.newFeed {
+.feed {
 	width: 500px;
 	margin: auto;
 	display: block;
@@ -228,7 +228,7 @@ body {
 }
 
 
-a{
+ a {
 	text-decoration: none;
 	color: inherit;	
 	
