--- a/instarkilogram/WebContent/view/style.css
+++ b/instarkilogram/WebContent/view/style.css
@@ -47,7 +47,8 @@ body {
 	justify-content: space-between;
 	margin-left: auto;
 	margin-right: auto;
-	font-size: 50px align-items: center;
+	font-size: 50px; 
+	align-items: center;
 }
 
 .grid-head {
@@ -71,8 +72,11 @@ body {
 	font-size: 15px;
 	margin-bottom: 8px;
 	border-radius: 4px;
+	border-style: solid;
+	focus {outline: 2px solid #d50000;
 }
 
+}
 .search_btn {
 	font-size: 15px;
 	height: 32px;
@@ -93,21 +97,22 @@ body {
 
 .file {
 	width: 500px;
-	margin: auto;
+	margin-left: 100px ;
 	display: block;
 	border-radius: 4px;
 }
 
 .post_content {
-	width: 500px;
-	margin: auto;
+	width: 614px;
+	margin-left:100px;
 	display: block;
 	border-radius: 4px;
 }
 
 .feed {
-	width: 500px;
-	margin: 200px;
+	width: 614px;
+	margin-left: auto;
+	margin-right:auto;
 	display: block;
 	margin-top: 50px;
 }
@@ -119,8 +124,9 @@ body {
 	color: white;
 	font-size: 20px;
 	border: none;
-	width: 634px;
-	margin: auto;
+	width: 614px;
+	margin-left: auto;
+	margin-right:auto;
 	display: block;
 	border-radius: 4px;
 }
@@ -140,6 +146,7 @@ body {
 
 #f_input {
 	height: 30px;
+	width: 500px;
 }
 
 .main_body {
@@ -154,7 +161,7 @@ body {
 	margin: 10px;
 	height: 3000px;
 	border-radius: 5px;
-	
+	border-style: solid;
 }
 
 .feed_img {
