--- a/instarkilogram/WebContent/view/style.css
+++ b/instarkilogram/WebContent/view/style.css
@@ -73,7 +73,8 @@ body {
 	margin-bottom: 8px;
 	border-radius: 4px;
 	border-style: solid;
-	focus {outline: 2px solid #d50000;
+	focus {outline: 2px solid #d50000;}
+	
 }
 
 }
