--- a/instarkilogram/WebContent/view/style.css
+++ b/instarkilogram/WebContent/view/style.css
@@ -1,7 +1,13 @@
 @charset "UTF-8";
 
 body {
-	padding-top: 75px;
+	
+}
+
+.search_body {
+	height:inherit;
+	padding-top: 50px;
+	float: inherit;
 }
 
 .bar {
@@ -47,7 +53,7 @@ body {
 	justify-content: space-between;
 	margin-left: auto;
 	margin-right: auto;
-	font-size: 50px; 
+	font-size: 50px;
 	align-items: center;
 }
 
@@ -55,7 +61,15 @@ body {
 	float: inherit;
 }
 
+.search_grid {
+	display: flex;
+	
+	
+	
+}
+
 .grid-body {
+	
 	
 }
 
@@ -73,8 +87,8 @@ body {
 	margin-bottom: 8px;
 	border-radius: 4px;
 	border-style: solid;
-
 }
+
 .search_btn {
 	font-size: 15px;
 	height: 32px;
@@ -88,21 +102,22 @@ body {
 
 .write {
 	width: 800px;
-	height: 400px;
+	height: 1000px;
 	margin: auto;
 	margin-top: 120px;
 }
 
 .file {
 	width: 500px;
-	margin-left: 100px ;
+	margin-left: 100px;
 	display: block;
 	border-radius: 4px;
 }
 
 .post_content {
-	width: 614px;
-	margin-left:100px;
+	width: 400px;
+	margin-left: auto;
+	margin-right: auto;
 	display: block;
 	border-radius: 4px;
 }
@@ -110,7 +125,7 @@ body {
 .feed {
 	width: 614px;
 	margin-left: auto;
-	margin-right:auto;
+	margin-right: auto;
 	display: block;
 	margin-top: 50px;
 }
@@ -124,19 +139,17 @@ body {
 	border: none;
 	width: 614px;
 	margin-left: auto;
-	margin-right:auto;
+	margin-right: auto;
 	display: block;
 	border-radius: 4px;
 }
 
 .img_box {
-	width: 634px;
-	height: 634px;
 	margin: auto;
 	border: 1px solid #dbdbdb;
 	border-radius: 4px;
-	width: 614px;
-	height: 614px;
+	width: 400px;
+	height: 400px;
 	background-size: cover;
 	overflow: hidden;
 	margin: 0 auto;
@@ -144,7 +157,7 @@ body {
 
 #f_input {
 	height: 30px;
-	width: 500px;
+	width: 400px;
 }
 
 .main_body {
@@ -219,6 +232,16 @@ body {
 .profile_name {
 	margin-bottom: 400px;
 }
+
+.id_search_body {
+	padding-top:50px;
+	margin-left : auto;
+	margin-right : auto;
+	width: 500px;
+	
+	
+}
+
 
 a {
 	text-decoration: none;
