--- a/instarkilogram/WebContent/view/style.css
+++ b/instarkilogram/WebContent/view/style.css
@@ -59,14 +59,14 @@ body {
 	font-size: 10px;
 	align-items: center;
 }
-.img_icon { 
-	background-image:url("../img/blank.png");
+
+.img_icon {
+	background-image: url("../img/blank.png");
 	width: 50px;
 	height: 24px;
-	padding-left:5px;
-	
-	
+	padding-left: 5px;
 }
+
 .grid-head {
 	float: inherit;
 }
@@ -163,7 +163,8 @@ body {
 
 #f_input {
 	margin-left: auto;
-	margin-right: auto; height : 30px;
+	margin-right: auto;
+	height: 30px;
 	width: 400px;
 	height: 30px;
 }
@@ -174,20 +175,32 @@ body {
 	padding-top: 50px;
 }
 
-.feed_box {
-	background-color: white;
-	width: 480px;
-	margin: 10px;
-	height: 3000px;
-	border-radius: 5px;
-	border-style: solid;
+.center_body {
+	text-align: center;
+	height: 2000px;
+	flex-direction: column;
+	display: flex;
 }
 
+.feed_box {
+	background-color: white;
+	padding: 15px;
+	border-radius: 1%;
+	width: 634px;
+	margin: 10px;
+	float: inherit;
+	border: 1px solid #dbdbdb;
+}
+
+
 .feed_img {
-	width: 100%;
-	height: 60%;
+	padding: 8px;
+	padding-top: 3px;
+	width: 614px;
+	height: 614px;
 	object-fit: contain;
 }
+
 
 .feed_content {
 	paddint: 10px;
