--- a/instarkilogram/WebContent/view/style.css
+++ b/instarkilogram/WebContent/view/style.css
@@ -37,6 +37,11 @@ body {
 	width: 100%;
 }
 
+.home {
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .material-icons {
 	font-size: 30px;
 }
@@ -48,11 +53,6 @@ body {
 .linkLine {
 	text-decoration: none;
 	color: inherit;
-}
-
-.home {
-	margin-left: auto;
-	margin-right: auto;
 }
 
 .container {
@@ -73,9 +73,7 @@ body {
 }
 
 .icon_space {
-	padding : 8px;
-	
-	
+	padding: 8px;
 }
 
 .img_icon {
@@ -168,6 +166,10 @@ body {
 	margin-right: auto;
 	display: block;
 	border-radius: 4px;
+}
+
+#sbm:hover {
+	background-color: #a7aaad;
 }
 
 .img_box {
@@ -298,8 +300,11 @@ sign up css -->
 }
 
 .sign h1 {
-	font-size: 2.5em;
-	font-family: monospace;
+	text-align: center;
+	font-size: 36px;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+		Helvetica, Arial, sans-serif;
+	padding: 50px;
 	font-style: italic;
 }
 
