--- a/instarkilogram/WebContent/view/style.css
+++ b/instarkilogram/WebContent/view/style.css
@@ -154,6 +154,22 @@ body {
 	width: 400px;
 }
 
+.font1 {
+font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+		Helvetica, Arial, sans-serif;
+
+}
+#followBtn {
+	border: none;
+	background-color: #1E82FF;
+	color: white;	
+	
+}
+
+#followBtn:hover {
+	background-color: #2c3338;
+}
+
 #sbm {
 	margin-top: 2px;
 	height: 40px;
