--- a/instarkilogram/WebContent/view/style.css
+++ b/instarkilogram/WebContent/view/style.css
@@ -161,8 +161,11 @@ font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
 }
 #followBtn {
 	border: none;
+	padding : 5px;
+	width : 100px;
 	background-color: #1E82FF;
 	color: white;	
+	border-radius: 4px;
 	
 }
 
