--- a/instarkilogram/WebContent/view/style.css
+++ b/instarkilogram/WebContent/view/style.css
@@ -155,18 +155,17 @@ body {
 }
 
 .font1 {
-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
 		Helvetica, Arial, sans-serif;
-
 }
+
 #followBtn {
 	border: none;
-	padding : 5px;
-	width : 100px;
+	padding: 5px;
+	width: 100px;
 	background-color: #1E82FF;
-	color: white;	
+	color: white;
 	border-radius: 4px;
-	
 }
 
 #followBtn:hover {
@@ -203,11 +202,9 @@ font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
 }
 
 #f_input {
-	margin-left: auto;
-	margin-right: auto;
-	height: 30px;
+	margin: 15px; 
 	width: 400px;
-	height: 30px;
+	height: 25px;
 }
 
 .main_body {
@@ -241,7 +238,6 @@ font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
 	object-fit: contain;
 }
 
-
 .feed_like {
 	padding: 0x 0px;
 }
@@ -253,7 +249,6 @@ font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
 	margin-left: 10px;
 	margin-top: 5px;
 }
-
 
 .box_pro {
 	display: flex;
@@ -268,10 +263,10 @@ font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
 	border: none;
 }
 
-.butt {
-	padding: 5px 10px;
+#butt {
+	padding: 10px;
+	margin : 10px;
 }
-
 
 .id_search_body {
 	margin-top: 75px;
